# src/main/java/com/cryptorecommendation/controller/command/GetCryptoInfoCommand.java
@@ -1,8 +1,8 @@
 package com.cryptorecommendation.controller.command;
 
 import com.crypto.recommendation.generated.dto.CryptocurrencyInfoDto;
+import com.cryptorecommendation.converter.CryptoCurrencyMapper;
 import com.cryptorecommendation.exceptions.CryptoCurrencyNotFoundException;
-import com.cryptorecommendation.model.CryptoCurrency;
 import com.cryptorecommendation.service.CSVReaderService;
 
 import static java.util.Objects.requireNonNull;
@@ -10,9 +10,11 @@ import static java.util.Objects.requireNonNull;
 public class GetCryptoInfoCommand implements Command<String, CryptocurrencyInfoDto> {
 
     private final CSVReaderService csvReaderService;
+    private final CryptoCurrencyMapper cryptoCurrencyMapper;
 
-    public GetCryptoInfoCommand(CSVReaderService csvReaderService){
+    public GetCryptoInfoCommand(CSVReaderService csvReaderService, CryptoCurrencyMapper cryptoCurrencyMapper){
         this.csvReaderService = requireNonNull(csvReaderService, "CSVReaderService is missing");
+        this.cryptoCurrencyMapper = requireNonNull(cryptoCurrencyMapper, "cryptoCurrencyMapper is missing");
     }
 
     @Override
@@ -20,18 +22,7 @@ public class GetCryptoInfoCommand implements Command<String, CryptocurrencyInfoD
         return csvReaderService.getCryptoCurrencyList().stream()
                 .filter(cryptoCurrency -> cryptoCurrency.getSymbol().equals(symbol))
                 .findFirst()
-                .map(this::buildResponse)
+                .map(cryptoCurrencyMapper::toCryptoCurrencyInfoDto)
                 .orElseThrow(() -> new CryptoCurrencyNotFoundException("Symbol does not exist"));
-    }
-    private CryptocurrencyInfoDto buildResponse(CryptoCurrency cryptoCurrency) {
-        CryptocurrencyInfoDto dto = new CryptocurrencyInfoDto();
-
-        dto.setSymbol(cryptoCurrency.getSymbol());
-        dto.setNewestPrice(cryptoCurrency.getNewestPrice());
-        dto.setOldestPrice(cryptoCurrency.getOldestPrice());
-        dto.setMaxPrice(cryptoCurrency.getMaxPrice());
-        dto.setMinPrice(cryptoCurrency.getMinPrice());
-
-        return dto;
     }
 }
